@@ -40,6 +40,7 @@
 -【テーマ】rgba(255,255,255,0.7) などの形式の色カスタマイズに対応しました。
 -【fix/テーマ】cuteテーマでサイドバー要素をクリックできない。
 -【fix/テーマ】cuteテーマでスマホからアルバムを利用すると表示が崩れる。
+-【fix/テーマ】nature-forest/skyテーマでメイン部にドロップダウンメニューを置くと表示が崩れる。
 -【fix】MarkdownでGMF Code Syntax（```～```）中の記法がパースされていた。
 -【fix】perlキャッシュ環境で、DBの処理時間が0ms表示になり計測できないことがあった。
 -【fix】CGI動作時、Text-DBで無駄な処理が発生していた。
